UI for displaying cert

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,7 +105,7 @@
 =========================*/
 
 .o-circle__sign--success {
-  background: rgb(56, 176, 131);
+  background: #4bb2b9;
 }
 
 .o-circle__sign--success .o-circle__sign {
